# repository-ledger

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix
schema/: nexus.schema  repository-ledger.concept.schema
src/: client.rs  configuration.rs  daemon.rs  daemon_command.rs  frame_io.rs  lib.rs  spool.rs
src/schema/: daemon.rs
tests/: store.rs
