[package]
name         = "repository-ledger"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
description  = "Repository change ledger daemon and CLI."
publish      = false
build        = "build.rs"

[lib]
name = "repository_ledger"
path = "src/lib.rs"

[[bin]]
name = "repository-ledger-daemon"
path = "src/bin/repository-ledger-daemon.rs"

[[bin]]
name = "repository-ledger"
path = "src/bin/repository-ledger.rs"

[dependencies]
kameo                          = { version = "0.20.0", default-features = false, features = ["macros", "tracing"] }
meta-signal-repository-ledger = { git = "https://github.com/LiGoldragon/meta-signal-repository-ledger", branch = "main" }
nota-next                     = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv                           = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine                    = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-repository-ledger       = { git = "https://github.com/LiGoldragon/signal-repository-ledger", branch = "main" }
signal-frame                   = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
thiserror                      = "2"
tokio                          = { version = "1.47", features = ["io-util", "net", "rt-multi-thread", "time"] }
triad-runtime                  = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = { level = "warn", priority = -1 }
